Updated theme folder name. Updated Depreciated Code.